--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
         </div>
         <img class="city" src="./pexels-alex-qian-2304917.jpg" alt="Chicago-city">
         <div class="blend"></div>
-        <video src="./production ID 5192153.mp4" autoplay="true" loop></video>
+        <video src="./pexels-los-muertos-crew-8448113.mp4" autoplay="true" loop></video>
+    </div>
+
+    <div class="second-page">
+        <h2>Second Page</h2>
     </div>
 
 
