changed video and photos

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <h1 class="title">Learn to play guitar</h1>
             <h2 class="sub-title">Join today and find the right instructor for you.</h2>
         </div>
-        <img class="city" src="./pexels-alex-qian-2304917.jpg" alt="Chicago-city">
+        <img class="icon" width="250px" src="" alt="Chicago-city">
         <div class="blend"></div>
-        <video src="./pexels-los-muertos-crew-8448113.mp4" autoplay="true" loop></video>
+        <video src="./Pexels Videos 1654216.mp4" autoplay="true" loop></video>
     </div>
 
     <div class="second-page">
