--- a/index.html
+++ b/index.html
@@ -13,28 +13,29 @@
 <body>
     <div class="front-page">
         <div class="intro-text">
-            <h1 class="title">Learn to play guitar</h1>
-            <h2 class="sub-title">Join today and find the right instructor for you.</h2>
+            <h1 class="title">Big Header</h1>
+            <h2 class="sub-title">Lorem ipsum dipisicing elit. Reprehenderit hic omnis adip</h2>
         </div>
-        <img class="icon" width="250px" src="" alt="Chicago-city">
+        <img class="icon" width="250px" src="./rlogo.PNG" alt="R-Logo">
         <div class="blend"></div>
-        <video src="./Pexels Videos 1654216.mp4" autoplay="true" loop></video>
+        <video src="./pexels-rodnae-productions-5780542.mp4" autoplay="true" loop></video>
     </div>
 
     <div class="second-page">
         <h2>Second Page</h2>
     </div>
-
-
-
     <script 
-        src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZ
-        a1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    </script>
+        src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js" 
+        integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q==" 
+        crossorigin="anonymous" 
+        referrerpolicy="no-referrer"
+    ></script>
     <script 
         src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js" 
-        integrity="sha512-CPA5LMoJI/a5HkSIAKcBtFXe4gqGjPUL2ExF/3PmhrrHI17wod9xOqqF+0WZQRKIIq0KwF8oG5BaiWobtrke3A==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    </script>   
+        integrity="sha512-CPA5LMoJI/a5HkSIAKcBtFXe4gqGjPUL2ExF/3PmhrrHI17wod9xOqqF+0WZQRKIIq0KwF8oG5BaiWobtrke3A==" 
+        crossorigin="anonymous" 
+        referrerpolicy="no-referrer"
+    ></script>   
     <script src="./app.js"></script>
 </body>
 </html>
